<resources>
    <string name="app_name">MagazinInstrumente</string>
    <string name="NUME_CLIENT">Nume</string>
    <string name="PRENUME_CLIENT">Prenume</string>
    <string name="EMAIL">Email</string>
    <string name="VARSTA">Varsta</string>
    <string name="PAROLA">Parola</string>
    <string name="BUTON_INREGISTRARE">Inregistreaza-te</string>
    <string name="BUTON_AUTENTIFICARE">Autentifica-te</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="CATEGORIE">Categorie</string>
    <string name="TELEFON">Telefon</string>
    <string name="ADRESA">Adresa</string>
    <string name="NUMAR_PRODUSE">Numar produse</string>
    <string name="vizualizare_grafice">Vizualizare grafice</string>
    <string name="previzionare">previzionare</string>
    <string name="none">-</string>
    <string name="grafic_general">Grafic general</string>
    <string name="CLIENTI_REFERENCE">clienti</string>
    <string name="COMENZI_REFERENCE">comenzi</string>
    <string name="PRODUSE_REFERENCE">produse</string>
    <string name="AUDIO_REFERENCE">audio</string>
    <string name="CUMPARATURI_REFERENCE">cumparaturi</string>
    <string name="CURIERI_REFERENCE">curieri</string>
    <string name="nu_ai_efectuat_nicio_comanda">NU AI EFECTUAT NICIO COMANDA</string>
    <string name="reseteaza_parola">Reseteaza parola</string>
    <string name="nu_exista_date_pentru_utilizatorul_acesta">Nu exista date pentru utilizatorul acesta</string>
    <string name="cos_gol">COS GOL</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="CANTITATE">Cantitate</string>
    <string name="cosul_tau_de_cumparaturi">Coșul tău de cumpărături</string>
    <string name="istoricul_tau">Istoricul tău</string>
    <string name="finalizeaza_comanda">Finalizează comanda</string>
    <string name="ron">RON</string>
    <string name="plata_cu_card">Plata cu card?</string>
    <string name="date_factura">Date facturare</string>
    <string name="iti_mai_recomandam">Iti mai recomandam</string>
    <string name="seteaza_buget">Reseteaza buget</string>
    <string name="introdu_noul_buget">Introdu noul buget</string>
    <string name="ok">OK</string>
    <string name="PRET">Pret</string>
    <string name="clape">Clape</string>
    <string name="suflat">Suflat</string>
    <string name="percuctie">Percuctie</string>
    <string name="toate">Toate</string>
    <string name="plaseaza_comanda">Plaseaza comanda</string>
    <string name="ai_un_cont_autentifica_te">Ai un cont? Autentifică-te!</string>
    <string name="asculta">Asculta</string>
    <string name="adauga_in_cos">Adauga in cos</string>
    <string name="nu_ai_un_cont_inregistreaza_te">Nu ai un cont? Inregistreaza-te!</string>
    <string name="bun_venit_admin">BUN VENIT, ADMIN</string>
    <string name="descopera_graficele_utilizatorilor">DESCOPERA GRAFICELE UTILIZATORILOR</string>
    <string name="vezi_graficul_general">VEZI GRAFICUL GENERAL</string>

</resources>