<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    tools:ignore="MissingConstraints">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:background="@drawable/background_product">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/NUME_CLIENT"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/name"
                android:layout_marginBottom="110dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/PRET"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    app:layout_constraintRight_toLeftOf="@+id/pricelei"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="25dp"
                    />

                <TextView
                    android:id="@+id/pricelei"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:text="@string/ron"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/price"
                    app:layout_constraintRight_toRightOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/songUrl"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30sp"
                android:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
